; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.3.5/src/extr_loslib.c_os_tmpname.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.3.5/src/extr_loslib.c_os_tmpname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TMPNAMBUFSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"unable to generate a unique filename\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @os_tmpname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @os_tmpname(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %8 = load i32, i32* @LUA_TMPNAMBUFSIZE, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %4, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @lua_tmpnam(i8* %11, i32 %12)
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %1
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @luaL_error(i32* %17, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  store i32 %18, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %22

19:                                               ; preds = %1
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @lua_pushstring(i32* %20, i8* %11)
  store i32 1, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %22

22:                                               ; preds = %19, %16
  %23 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %23)
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @lua_tmpnam(i8*, i32) #2

declare dso_local i32 @luaL_error(i32*, i8*) #2

declare dso_local i32 @lua_pushstring(i32*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
